--- a/index.html
+++ b/index.html
@@ -65,7 +65,30 @@
         </div>
     </div>
 </section>
-<h1>tyfytfhg</h1>
+<header id="header">
+    <div class="container">
+        <div class="header">
+
+
+            <div class="head">
+                <h1>Get it on Play Store and download on</h1>
+            </div>
+            <div class="h1">
+                <h1>the App Store</h1>
+            </div>
+            <div>
+
+            </div>
+
+
+        </div>
+
+    </div>
+
+
+
+</header>
+
 
 
 
